name:                liu-ms-adult
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/liu-ms-adult#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LiuMS
  other-modules:       Servant.ContentType.Processable
                     , Servant.ContentType.PlainHtml
                     , Servant.ContentType.ClayCss

                     , LiuMS.SiteInfo
                     , LiuMS.Template.Basic
                     , LiuMS.Css.Basic

  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , directory
                     , either
                     , text
                     , transformers

                     , http-media
                     , servant
                     , servant-server >= 0.4 && < 0.5

                     , blaze-markup
                     , blaze-html
                     , clay
                     , pandoc
  default-language:    Haskell2010

executable liu-ms-adult-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , liu-ms-adult
                     , servant-server >= 0.4 && < 0.5
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite liu-ms-adult-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , liu-ms-adult
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/liu-ms-adult
